Improve review finder for custom replacement and tests